--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "font-awesome": "^4.7.0",
-    "react-sortablejs": "^6.1.4",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
     "next": "14.0.4",
@@ -27,6 +26,8 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-social-icons": "^6.7.0",
+    "react-sortablejs": "^6.1.4",
+    "sonner": "^1.4.0",
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
