--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
+    "react-intersection-observer": "^9.7.0",
     "react-social-icons": "^6.7.0",
     "react-sortablejs": "^6.1.4",
     "recharts": "^2.11.0",
