--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "clone-deep": "^4.0.1",
     "date-fns": "^3.3.1",
+    "object-copy": "^1.0.0",
     "font-awesome": "^4.7.0",
     "framer-motion": "^11.0.3",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
+    "plain-object-clone": "^2.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
