--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "clone-deep": "^4.0.1",
+    "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
-    "object-copy": "^1.0.0",
     "font-awesome": "^4.7.0",
     "framer-motion": "^11.0.3",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
+    "object-copy": "^1.0.0",
     "plain-object-clone": "^2.0.0",
     "react": "^18",
     "react-dom": "^18",
@@ -34,7 +35,9 @@
     "react-social-icons": "^6.7.0",
     "react-sortablejs": "^6.1.4",
     "recharts": "^2.11.0",
+    "simplex-noise": "^4.0.1",
     "sonner": "^1.4.0",
+    "tailwind-merge": "^2.2.1",
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
